--- a/settings.json
+++ b/settings.json
@@ -1,22 +1,49 @@
 {
+
     "self_mode": true,
+
 	"autobio": true,
+
 	"antihidetag": true,
+
+	"user_register": true,
+
+	"antidelete" : false,
+
+	"anticall": true,
+
 	"prefix": ".",
+
 	"language":"ind",
+
 	"ownerNumber": "6288245009287",
+
 	"ownerNumberr": "6288245009287",
-	"cr": "@Arie",
-	"yt":"bit.ly/arietube",
-	"grub": "bit.ly/gczeeoneofc",
-	"wa": "bit.ly/wazeeoneofc",
-	"donate": "bit.ly/dtzeeoneofc",
-	"ig": "bit.ly/igzeeoneofc",
-	"gt": "bit.ly/gtzeeoneofc",	
-	"ownername": "ariee",
-	"botname":"arietube",
-	"img":"https://e.top4top.io/p_2010lz9211.jpg",
+
+	"cr": "@Arietube",
+
+	"yt":"bit.ly/ytarietube",
+
+	"grub": "bit.ly/gcarietube",
+
+	"wa": "bit.ly/waarietube",
+
+	"donate": "bit.ly/dtarietube",
+
+	"ig": "bit.ly/igarietube",
+
+	"gt": "bit.ly/gtarietube",	
+
+	"ownername": "ArieTube",
+
+	"botname":"ARIE TUBE",
+
+	"img":"https://i.top4top.io/p_2131ybynv1.jpg",
+
 	"thumb":"Alphabot.jpg",
+
 	"fakethumb":"Alphabot.jpg", 
-	"fake": " 「  Alphabot  」\nCreated By @ZeeoneOfc"
+
+	"fake": " 「  ARIE TUBE  」\nCreated By @ArieTube"
+
 }
