--- a/settings.json
+++ b/settings.json
@@ -20,7 +20,7 @@
 
 	"ownerNumberr": "6288245009287",
 
-	"cr": "@Arietube",
+	"cr": "@ZeeoneOfc",
 
 	"yt":"bit.ly/ytarietube",
 
@@ -44,6 +44,6 @@
 
 	"fakethumb":"Alphabot.jpg", 
 
-	"fake": " 「  ARIE TUBE  」\nCreated By @ArieTube"
+	"fake": " 「  ARIE TUBE  」\nCreated By @ZeeoneOfc"
 
 }
