--- a/settings.json
+++ b/settings.json
@@ -1,49 +1,25 @@
 {
-
-    "self_mode": true,
-
+    "self_mode": false,
 	"autobio": true,
-
 	"antihidetag": true,
-
 	"user_register": true,
-
 	"antidelete" : false,
-
 	"anticall": true,
-
 	"prefix": ".",
-
 	"language":"ind",
-
 	"ownerNumber": "6288245009287",
-
 	"ownerNumberr": "6288245009287",
-
-	"cr": "@ArieTube",
-
-	"yt":"bit.ly/ytarietube",
-
-	"grub": "bit.ly/gcarietube",
-
-	"wa": "bit.ly/waarietube",
-
-	"donate": "bit.ly/dtarietube",
-
-	"ig": "bit.ly/igarietube",
-
-	"gt": "bit.ly/gtarietube",	
-
+	"cr": "@ZeeoneOfc",
+	"yt":"bit.ly/ytzeeoneofc",
+	"grub": "bit.ly/gczeeoneofc",
+	"wa": "bit.ly/wazeeoneofc",
+	"donate": "bit.ly/dtzeeoneofc",
+	"ig": "bit.ly/igzeeoneofc",
+	"gt": "bit.ly/gtzeeoneofc",	
 	"ownername": "ArieTube",
-
-	"botname":"ARIE TUBE",
-
+	"botname":"Arie Tube",
 	"img":"https://i.top4top.io/p_2131ybynv1.jpg",
-
 	"thumb":"Alphabot.jpg",
-
 	"fakethumb":"Alphabot.jpg", 
-
-	"fake": " 「  ARIE TUBE  」\nCreated By @ZeeoneOfc"
-
+	"fake": " 「  Alphabot  」\nCreated By @ZeeoneOfc"
 }
