--- a/settings.json
+++ b/settings.json
@@ -2,9 +2,6 @@
     "self_mode": false,
 	"autobio": true,
 	"antihidetag": true,
-	"user_register": true,
-	"antidelete" : false,
-	"anticall": true,
 	"prefix": ".",
 	"language":"ind",
 	"ownerNumber": "6288245009287",
@@ -17,7 +14,7 @@
 	"ig": "bit.ly/igzeeoneofc",
 	"gt": "bit.ly/gtzeeoneofc",	
 	"ownername": "ArieTube",
-	"botname":"Arie Tube",
+	"botname":"ARIE TUBE",
 	"img":"https://i.top4top.io/p_2131ybynv1.jpg",
 	"thumb":"Alphabot.jpg",
 	"fakethumb":"Alphabot.jpg", 
