--- a/settings.json
+++ b/settings.json
@@ -15,7 +15,7 @@
 	"gt": "bit.ly/gtzeeoneofc",	
 	"ownername": "ArieTube",
 	"botname":"ARIE TUBE",
-	"img":"https://i.top4top.io/p_2131ybynv1.jpg",
+	"img":"https://e.top4top.io/p_2010lz9211.jpg",
 	"thumb":"Alphabot.jpg",
 	"fakethumb":"Alphabot.jpg", 
 	"fake": " 「  Alphabot  」\nCreated By @ZeeoneOfc"
