--- a/settings.json
+++ b/settings.json
@@ -6,17 +6,17 @@
 	"language":"ind",
 	"ownerNumber": "6288245009287",
 	"ownerNumberr": "6288245009287",
-	"cr": "@ZeeoneOfc",
-	"yt":"bit.ly/ytzeeoneofc",
-	"grub": "bit.ly/gczeeoneofc",
-	"wa": "bit.ly/wazeeoneofc",
-	"donate": "bit.ly/dtzeeoneofc",
-	"ig": "bit.ly/igzeeoneofc",
-	"gt": "bit.ly/gtzeeoneofc",	
+	"cr": "@Arietube",
+	"yt":"bit.ly/ytarietube",
+	"grub": "bit.ly/gcarietube",
+	"wa": "bit.ly/wazearitube",
+	"donate": "bit.ly/dtarietube",
+	"ig": "bit.ly/igarietube",
+	"gt": "bit.ly/gtarietube",	
 	"ownername": "ArieTube",
 	"botname":"ARIE TUBE",
-	"img":"https://e.top4top.io/p_2010lz9211.jpg",
+	"img":"https://e.top4top.io/p_2010lz9211.jpg"",
 	"thumb":"Alphabot.jpg",
 	"fakethumb":"Alphabot.jpg", 
-	"fake": " 「  Alphabot  」\nCreated By @ZeeoneOfc"
+	"fake": " 「  Arietube  」\nCreated By @Arietube"
 }
