--- a/settings.json
+++ b/settings.json
@@ -15,7 +15,7 @@
 	"gt": "bit.ly/gtarietube",	
 	"ownername": "ArieTube",
 	"botname":"ARIE TUBE",
-	"img":"https://e.top4top.io/p_2010lz9211.jpg"",
+	"img":"https://e.top4top.io/p_2010lz9211.jpg",
 	"thumb":"Alphabot.jpg",
 	"fakethumb":"Alphabot.jpg", 
 	"fake": " 「  Arietube  」\nCreated By @Arietube"
